--- a/routing.html
+++ b/routing.html
@@ -48,12 +48,14 @@
                 <div id='tabs' ui-sref='home' ui-sref-active='activeTab'>Home</div>
                 <div id='tabs' ui-sref='contacts' ui-sref-active='activeTab'>Contacts</div>
                 <div id='tabs' ui-sref='search' ui-sref-active='activeTab'>Search</div>
+                <div id='tabs' ui-sref='http' ui-sref-active='activeTab'>$http</div>
         </div>  
         <br/>
         <ui-view></ui-view>
-
     </body>
     <script src="angular.min.js"></script>
         <script src="angular-ui-router.min.js"></script>
         <script src='js/routingapp.js'></script>
+        <script src='js/customservice.js'></script>
+        <script src='js/httprouting.js'></script>
 </html>
