--- a/customdirective.html
+++ b/customdirective.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html ng-app='customServiceApp'>
+<html ng-app='customDirectiveApp'>
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.7/angular.min.js"></script>
         <script src='js/customdirective.js'></script>
