--- a/customservice.html
+++ b/customservice.html
@@ -1,10 +1,11 @@
-<!DOCTYPE HTML>
+<!-- <!DOCTYPE HTML>
 <html ng-app='customServiceApp'>
     <head>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.7.7/angular.min.js"></script>
         <script src='js/customservice.js'></script>
     </head>
-    <body>
+    <body> -->
+        <div ng-app='customServiceApp'>
         <h1>Custom Service</h1>  
         <div ng-controller='ShoppingListAddController as itemAdder'>
             <input type='text' ng-model='itemAdder.itemName' placeholder="item name">
@@ -17,5 +18,6 @@
                 <button ng-click='showList.removeItem($index);'>Remove Item</button></li>
             </ol>
         </div>
-    </body>
-</html>
+        </div>
+    <!-- </body>
+</html> -->
